@@ -40,6 +40,10 @@ Core and Builtins
 Library
 -------
 
+- Issue #6896: mailbox.Maildir now invalidates its internal cache each time
+  a modification is done through it.  This fixes inconsistencies and test
+  failures on systems with slightly bogus mtime behaviour.
+
 - Issue #6665: Fix fnmatch to properly match filenames with newlines in them.
 
 - Issue #7246 & Issue #7208: getpass now properly flushes input before
